Try a fix for modal stretching too high with portrait photos

--- a/project/ajapaik/static/css/ajapaik-style.css
+++ b/project/ajapaik/static/css/ajapaik-style.css
@@ -1204,7 +1204,8 @@ a.fullscreen {
 #ajapaik-game-modal-photo {
     padding-right: 0 !important;
     padding-left: 0 !important;
-    max-height: 600px;
+    width: auto;
+    max-height: 400px;
 }
 
 #ajapaik-game-modal-photo-container img {
@@ -1587,8 +1588,8 @@ ul.errorlist {
 #ajapaik-modal-photo {
     margin: 0 auto;
     padding: 0 !important;
-    max-height: 600px;
     width: auto;
+    max-height: 400px;
 }
 
 #ajapaik-photo-modal-map-container {
